[gd_scene load_steps=18 format=3 uid="uid://c2ysjggihyfw6"]

[ext_resource type="Script" uid="uid://c07qsyt25g57y" path="res://scripts/hitbox.gd" id="1_717iw"]
[ext_resource type="Script" uid="uid://cklgj872uqtr" path="res://scenes/tile.gd" id="1_o7s5e"]
[ext_resource type="Texture2D" uid="uid://b5x8vr822pve2" path="res://assets/gdodjam25tiles.png" id="1_ujvch"]
[ext_resource type="Script" uid="uid://cop8kdjtvd461" path="res://scripts/healthcomponent.gd" id="3_tm5ti"]
[ext_resource type="Script" uid="uid://laanabe07mn" path="res://addons/shaker/src/Vector2/shaker_component2D.gd" id="4_g5buo"]
[ext_resource type="Script" uid="uid://dr2b4djf4yy6e" path="res://addons/shaker/data/Vector2/BaseShakerType2D.gd" id="5_kxl3g"]
[ext_resource type="Script" uid="uid://ci4nvldbwgyyc" path="res://addons/shaker/data/Vector2/ShakerTypeSineWave2D.gd" id="6_3cofm"]
[ext_resource type="Script" uid="uid://dn5l5yysmxmn6" path="res://addons/shaker/data/Single/BaseShakerType1D.gd" id="7_r3vgf"]
[ext_resource type="Script" uid="uid://boxwngwghmra3" path="res://addons/shaker/data/Single/ShakerTypeBrownianShake1D.gd" id="8_4vnm6"]
[ext_resource type="Script" uid="uid://cms1s1umu7r7x" path="res://addons/shaker/data/Vector2/ShakerPreset2D.gd" id="9_okqby"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ox66"]
size = Vector2(4, 4)

[sub_resource type="Resource" id="Resource_e3equ"]
script = ExtResource("6_3cofm")
frequency = Vector2(1, 1)
phase = Vector2(1, 1)
amplitude = Vector2(0.3, 0.3)
offset = Vector2(0, 0)
BlendingMode = 0
fade_in = 0.0
fade_out = 0.0
start_percent = 0.0
end_percent = 1.0
_temp_graph = false
bake_internal = 64

[sub_resource type="Resource" id="Resource_dflku"]
script = ExtResource("8_4vnm6")
roughness = 0.18
persistence = 0.5
amplitude = 0.5
offset = 0.0
BlendingMode = 0
fade_in = 0.0
fade_out = 0.0
start_percent = 0.0
end_percent = 1.0
_temp_graph = false
bake_internal = 64

[sub_resource type="Resource" id="Resource_akm5y"]
script = ExtResource("9_okqby")
PositionShake = Array[ExtResource("5_kxl3g")]([SubResource("Resource_e3equ")])
RotationShake = Array[ExtResource("7_r3vgf")]([SubResource("Resource_dflku")])
ScaleShake = Array[ExtResource("5_kxl3g")]([])
bake_internal = 64
__follow_timeline = false

[sub_resource type="Animation" id="Animation_edhww"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tile/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dtrbu"]
resource_name = "fall"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tile/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(4, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k3f81"]
_data = {
&"RESET": SubResource("Animation_edhww"),
&"fall": SubResource("Animation_dtrbu")
}

[node name="tile" type="Node2D"]
script = ExtResource("1_o7s5e")

[node name="Tile" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
position = Vector2(1.20141e-07, -1.02259e-06)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_717iw")
health_component = NodePath("Health_Component")

[node name="Sprite2D" type="Sprite2D" parent="Tile"]
texture = ExtResource("1_ujvch")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile"]
position = Vector2(-9.31706e-10, 1.1418e-06)
shape = SubResource("RectangleShape2D_3ox66")

[node name="Health_Component" type="Node" parent="Tile" node_paths=PackedStringArray("host")]
script = ExtResource("3_tm5ti")
host = NodePath("../..")
delete_host_on_death = false
max_health = 3.0
health = 3.0

[node name="ShakerComponent2D" type="Node2D" parent="Tile"]
script = ExtResource("4_g5buo")
AutoPlay = true
intensity = 0.0
shake_speed = 7.0
shakerPreset = SubResource("Resource_akm5y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_k3f81")
}

[connection signal="dead" from="Tile/Health_Component" to="." method="_on_health_component_dead"]
